--- a/sections/content-hub.liquid
+++ b/sections/content-hub.liquid
@@ -137,7 +137,8 @@
         {
           "type": "richtext",
           "id": "custom_block",
-          "label": "Write text"
+          "label": "Textfeld",
+          "default": "<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>"
         },
         {
           "type": "text",
